# rustycanvas

./: .gitignore
backend/: Cargo.toml
backend/data/: canvas.json
backend/src/: lib.rs  main.rs
backend/src/server/: handlers.rs  mod.rs  routes.rs  state.rs
backend/tests/: integration_tests.rs  unit_tests.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs  types.rs
rustycanvaswifi/: Cargo.toml
rustycanvaswifi/.cargo/: config.toml
rustycanvaswifi/src/: main.rs
